# respira-data

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  python-build.yml  python-format.yml  python-lint.yml
dbt/: dbt_project.yml  profiles.yml  selectors.yml
dbt/macros/: aqi.sql  generate_schema_name.sql  parse_fiuna_timestamp.sql  surrogate_bigint.sql  unpivot_measurements.sql
dbt/models/bronze/: sources.yml
dbt/models/canonical/core/: bridge_project_data_sources.sql  bridge_project_organizations.sql  dim_data_sources.sql  dim_organizations.sql  dim_projects.sql  dim_stations.sql  dim_streams.sql  dim_variables.sql  schema.yml
dbt/models/canonical/silver/: docs.md  fct_measurements_silver.sql  schema.yml
dbt/models/canonical/sources/: sources_airbyte.yml
dbt/models/canonical/staging/: stg_airelibre_measurements.sql  stg_meteostat_weather.sql
dbt/models/marts/core/: dim_data_sources.sql  dim_stations.sql  schema.yml
dbt/models/marts/facts/: docs.md  fct_measurements_bronze.sql  fct_measurements_silver.sql  vw_measurements_silver_wide.sql
dbt/models/marts/respira-gold/: README.md  inference_runs.sql  int_air_quality_stations.sql  int_calibration_factors.sql  int_measurements_hourly.sql  int_station_hourly_calibrated.sql  int_station_id_map.sql  int_station_regions.sql  int_weather_stations.sql  schema.yml  (+3 more)
dbt/models/sources/: sources_airbyte.yml
dbt/models/staging/: schema.yml  stg_airelibre_measurements.sql  stg_fiuna_measurements.sql  stg_meteostat_weather.sql
dbt/seeds/: calibration_factors_seed.csv  data_sources.csv  organizations.csv  project_data_sources.csv  project_organizations.csv  projects.csv  regions_seed.csv  schema.yml  station_region_seed.csv  stations_static.csv  variable_rules.csv  variables.csv
docs/security/: INCIDENT_RESPONSE.md  THREAT_MODEL.md
inference/test/: .gitignore  README.md  app.py  fake_station_inference_features.csv  generate_fake_csv.py  harness.py  requirements.txt  run_fake_inference.py
models/: 2024-09-26_v0.1.0_model-12h.pkl  2024-09-26_v0.1.0_model-6h.pkl
pipelines/: README.md  compat.py
pipelines/config/: projects.py  settings.py
pipelines/deployments/: canonical_full_refresh.yaml  canonical_incremental.yaml  project_pipeline_respira_gold.yaml
pipelines/flows/: canonical_full_refresh.py  canonical_incremental.py  dbt_build.py  project_inference.py  project_pipeline.py  warehouse_bootstrap.py
pipelines/sql/: 02_ops_audit.sql  03_inference_tables.sql
pipelines/tasks/: artifacts.py  db.py  dbt_tasks.py  gates.py  inference_tasks.py  notifications.py  redaction.py
pipelines/utils/: git.py
prefect/: README.md  compat.py
prefect/config/: projects.py  selectors.py  settings.py
prefect/deployments/: canonical_full_refresh.yaml  dbt_full_refresh.yaml  dbt_gold.yaml  dbt_incremental.yaml  gold_then_inference.yaml  inference_per_station.yaml
prefect/flows/: bronze_flow.py  canonical_full_refresh.py  canonical_incremental.py  dbt_build.py  dbt_full_refresh.py  dbt_gold.py  dbt_incremental.py  gold_then_inference.py  inference_per_station.py  project_inference.py  project_pipeline.py  warebouse_bootstrap.py  warehouse_bootstrap.py
prefect/sql/: 02_ops_audit.sql
prefect/tasks/: artifacts.py  db.py  dbt_tasks.py  inference_tasks.py  notifications.py
scripts/: prefect_worker_start.sh
src/inference/: __init__.py  feature_adapter.py  model_loader.py  predictor.py
tests/: conftest.py  test_artifacts.py  test_db_sql.py  test_dbt_tasks_command.py  test_gates.py  test_inference_flow.py  test_inference_json.py  test_model_loader_security.py  test_projects_config.py  test_redaction.py  test_settings_dsn.py
(+23 files in other folders)
