[tool.poetry]
name = "respira-data"
version = "0.1.0"
description = ""
authors = ["Fernanda Carles <fernanda.carles@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "pipelines" },
    { include = "inference", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
dbt-core = "^1.11.2"
dbt-postgres = "^1.10.0"
psycopg = { version = "^3.3.2", extras = ["binary"] }
sqlalchemy = "^2.0.45"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"
prefect = "^3.6.9"
prefect-dbt = "^0.7.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pandas-stubs = "^2.2.0"


[tool.poetry.group.inference.dependencies]
u8darts = "0.30.0"
lightgbm = "^4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

