[tool.poetry]
name = "respira-data"
version = "0.1.0"
description = ""
authors = ["Fernanda Carles <fernanda.carles@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "pipelines" },
    { include = "inference", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
dbt-core = "^1.11.7"
dbt-postgres = "^1.10.0"
psycopg = { version = "^3.3.2", extras = ["binary"] }
sqlalchemy = "^2.0.45"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.2"
pandas = "^2.3.3"
prefect = "^3.6.9"
prefect-dbt = "^0.7.19"
urllib3 = "^2.6.3"
deepdiff = "^8.6.2"
pillow = "^12.2.0"
protobuf = "^6.33.5"
cryptography = "^46.0.7"
orjson = "^3.11.6"
mako = "^1.3.11"
requests = "^2.33.0"
pygments = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.12"
mypy = "^1.10.0"
pre-commit = "^4.0.0"


[tool.poetry.group.inference.dependencies]
u8darts = "0.30.0"
lightgbm = "^4.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
# Resolve imports relative to these source roots.
src = ["pipelines", "src", "tests", "inference"]
# Enforce exclusions even when paths are passed directly on the CLI.
force-exclude = true

[tool.ruff.lint]
# E4/E7/E9: pycodestyle errors, F: Pyflakes, I: isort, UP: pyupgrade.
select = ["E4", "E7", "E9", "F", "I", "UP"]
# E501 (line-too-long) is handled best-effort by the formatter; avoid conflicts.
ignore = ["E501"]
# Allow all fixable rules to be fixed automatically when --fix is supplied.
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert statements freely.
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
